--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <h1>Constance Crawford</h1>
+    <a href="./index.html">HOME</a>
+    <a href="./jobs.html">JOBS</a>
+    <a href="./education.html">EDUCATION</a>
     <img src="aboutme photo.jpg" width="200"  alt="Photo of Constance">
     <h2>Heading home after dinner with the family</h2>
     
