--- a/education.html
+++ b/education.html
@@ -7,11 +7,30 @@
     <title>Document</title>
 </head>
 <body>
+    <style>
+        body{
+            background-color: #b5838d;
+        }
+        #navbar{
+            position: fixed;
+            top: 0;
+            width: 100%;
+            background-color: cornsilk;
+        }
+        ul{
+            margin: 0;
+        }
+    </style>
     <h1>Education</h1>
+    <ul id="navbar"> 
+        
     <a href="./education.html">EDUCATION</a>
     <a href="./jobs.html">JOBS</a>
     <a href="./index.html">HOME</a>
+</ul>
+
     <h2>Western Hills High school</h2>
+
     <ul>
         <li>General Studies</li>
     </ul>
