--- a/jobs.html
+++ b/jobs.html
@@ -4,30 +4,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JOBS</title>
 </head>
 <body>
+
+    <style>
+        body{
+            background-color: #e5989b;
+        }
+
+        .column{
+            float: left;
+            width: 50%;
+        }
+    </style>
+
    <h1>Job History</h1> 
    <a href="./jobs.html">JOBS</a>
    <a href="./education.html">EDUCATION</a>
    <a href="./index.html">HOME</a>
    <h2>CDK GLOBAL</h2>
    <img src="cdk.jpg" alt="CDK GLOBAL">
-   <ol>
+   <ol class="column">
        <li>Receives inbound calls, web chat, and emails.</li>
        <li>Troubleshoolt malfuntioning software applications.</li>
        <li>Directs and guides clients through resolution of technical issues.</li>
    </ol>
    <h2>CBTS</h2>
    <img src="cbts.png" alt="CBTS">
-   <ol>
+   <ol class="column">
        <li>Upgrades and maintains desktop PCs and mobile devices.</li>
        <li>Configure, install, and troubleshoot desktop and mobile devices.</li>
        <li>Adhere to asset inventory process for IT hardware</li>
    </ol>
    <h2>Kable Academy</h2>
    <img src="KableAcademy_logo.jpg" alt="The Kable Academy">
-   <ol>
+   <ol class="column">
        <li>Conducting one-on-one meetings and workshops</li>
        <li>Assisted with resumes and LinkedIn profiles</li>
        <li>Assisted with Comptia prep</li>
